# TUILib

./: .gitignore  CMakeLists.txt  README.md  main.c
samples/: sample1.c  sample1.h
src/: sample1.c
src/main/: mainloop.c  mainloop.h
src/main/management/: colors.h  observers.c  observers.h  views.c
src/object/observer/: event_type.c  rect_click_observer.c  rect_click_observer.h
src/object/view/: rect_view.h  view.h
src/utils/: colors.c  dynamic_arrays.h
tui_lib/: CMakeLists.txt
tui_lib/core/: mainloop.c  mainloop.h
tui_lib/core/management/: model.c  observers.c  observers.h  views.c  views.h
tui_lib/main/: mainloop.c
tui_lib/main/management/: model.h  views.h
tui_lib/object/observer/: observer.h
tui_lib/object/view/: rect_view.c
tui_lib/objects/core/observer/: event_type.h  key_click_observer.c  key_click_observer.h  observer.h  rect_click_observer.c  rect_click_observer.h
tui_lib/objects/core/view/: rect_view.c  rect_view.h  text_view.c  text_view.h  view.h
tui_lib/objects/ui/: block.c  block.h  button.c  button.h  multi_object.c  multi_object.h  text_field.c  text_field.h
tui_lib/utils/: dynamic_arrays.c  point.c  point.h
